--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,32 @@
+// Custom Theming for Angular Material
+@use '@angular/material' as mat;
+
+// Include the common styles for Angular Material.
+@include mat.core();
+
+// Define the palettes for your theme using the Material Design palettes
+$alarmaWeb-primary: mat.define-palette(mat.$yellow-palette);  // Cambiado a amarillo
+$alarmaWeb-accent: mat.define-palette(mat.$amber-palette, A200, A100, A400);  // Amber es una variante amarilla
+
+// The warn palette is optional (defaults to red).
+$alarmaWeb-warn: mat.define-palette(mat.$red-palette);
+
+// Create the theme object.
+$alarmaWeb-theme: mat.define-light-theme((
+  color: (
+    primary: $alarmaWeb-primary,
+    accent: $alarmaWeb-accent,
+    warn: $alarmaWeb-warn,
+  )
+));
+
+// Include theme styles for core and each component used in your app.
+@include mat.all-component-themes($alarmaWeb-theme);
+
 /* You can add global styles to this file, and also import other style files */
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+
+$color-principal: #d6f491;
