--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -8,7 +8,7 @@
     <button type="button" class="btn"><i class="fa-solid fa-chevron-right"></i></button>
   </div>
 
-  <div class="row">
+  <div class="row mt-4">
     <!-- Primera columna -->
     <div class="col-md-4">
       <!-- Contenido del primer ítem -->
@@ -54,7 +54,7 @@
     <button type="button" class="btn"><i class="fa-solid fa-chevron-right"></i></button>
   </div>
 
-  <div class="row">
+  <div class="row mt-4">
     <!-- Primera columna -->
     <div class="col-md-4">
       <!-- Contenido del primer ítem -->
@@ -65,6 +65,47 @@
     <div class="col-md-4">
       <!-- Contenido del segundo ítem -->
       <app-rutina-item></app-rutina-item>
+    </div>
+    <div class="col-md-4">
+      <!-- Contenido del segundo ítem -->
+      <div class="card bg-p-ligth">
+        <div class="card-body">
+          <div class="row align-items-center">
+            <!-- Lado izquierdo: Título y Botón -->
+            <div class="col-8 ">
+              <h5 class="card-title ">Sesión de Estudio</h5>
+              <button class="btn custom-btn mt-3">
+                <i class="fas fa-plus"></i> Iniciar sesión de estudio
+              </button>
+            </div>
+            <!-- Lado derecho: Ícono grande -->
+            <div class="col-md-4 text-right">
+              <i class="fas fa-icono-grande fa-3x"><i class="fa-solid fa-book-open-reader"></i></i>
+              <!-- Reemplaza 'fa-icono-grande' con el ícono que desees de Font Awesome -->
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="card bg-s-ligth mt-4">
+        <div class="card-body">
+          <div class="row align-items-center">
+            <!-- Lado izquierdo: Título y Botón -->
+            <div class="col-8 ">
+              <h5 class="card-title ">Calendario</h5>
+              <button class="btn custom-btn-2 mt-3">
+                <i class="fas fa-plus"></i> Conectar con Calendario
+              </button>
+            </div>
+            <!-- Lado derecho: Ícono grande -->
+            <div class="col-md-4 text-right">
+              <i class="fas fa-icono-grande fa-3x"><i class="fa-regular fa-calendar-days"></i></i>
+              <!-- Reemplaza 'fa-icono-grande' con el ícono que desees de Font Awesome -->
+            </div>
+          </div>
+        </div>
+      </div>
+
     </div>
   </div>
 
