--- a/src/app/components/alarm-item/alarm-item.component.html
+++ b/src/app/components/alarm-item/alarm-item.component.html
@@ -1,4 +1,4 @@
-<div class="container mt-5">
+<div class="container mb-3">
   <div class="card">
     <div class="card-body d-flex">
       <!-- Primera Parte: Círculo con Letra -->
