--- a/src/app/components/rutina-item/rutina-item.component.html
+++ b/src/app/components/rutina-item/rutina-item.component.html
@@ -1,4 +1,4 @@
-<div class="card my-3">
+<div class="card">
   <!-- Primera Parte: Letra Circular y Título -->
   <div class="section d-flex align-items-center justify-content-center p-3">
     <div class="circle-letter text-white me-3">
@@ -9,19 +9,19 @@
 
   <!-- Segunda Parte: Hora de inicio -->
   <div class="section p-3">
-    <p><b>Hora de Inicio:</b>
-      08:00 a.m</p> <!-- Hora de inicio -->
+    <span><b>Hora de Inicio:</b>
+      08:00 a.m</span> <!-- Hora de inicio -->
   </div>
 
   <!-- Tercera Parte: Hora de fin -->
   <div class="section p-3">
-    <p><b>Hora de FIn:</b>
-      10:00 a.m</p> <!-- Hora de fin -->
+    <span><b>Hora de Fin:</b>
+      10:00 a.m</span> <!-- Hora de fin -->
   </div>
 
   <!-- Cuarta Parte: Descripción -->
   <div class="section p-3">
-    <p>Descripción breve de la actividad</p>
+    <span>Descripción breve de la actividad</span>
   </div>
 
   <!-- Quinta Parte: Días de la semana -->
