--- a/src/app/pages/alarm-detail/alarm-detail.component.html
+++ b/src/app/pages/alarm-detail/alarm-detail.component.html
@@ -1,1 +1,21 @@
-<p>alarm-detail works!</p>
+<div class="container rounded-4 shadow-lg bg-success-subtle my-4 py-2">
+  <h1 class="fs-4 text-center">Crear Nueva Alarma</h1>
+  <div class="row mx-5">
+    <div class="col-md-4">
+      <app-timepicker />
+    </div>
+    <div class="col-md-8">
+
+      <div class="d-flex align-items-center">
+        <div class="pe-4">Repetir alarma </div>
+        <input type="checkbox" class="styled-checkbox">
+      </div>
+      <h5 class="pt-3">Dias Repetir</h5>
+
+    </div>
+
+
+
+
+
+  </div>
