--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,9 +1,9 @@
 <div class="container">
   <div class="d-flex pt-5">
-    <h3 class="pe-3">Alarmas </h3>
-    <button class="btn custom-btn">
-      <i class="fas fa-plus"></i> Crear Alarma
-    </button>
+    <h3 class="pe-3">Alarmas </h3><!-- Enlazar a otra página -->
+    <a routerLink="/alarm-detail/1"><button class="btn custom-btn">
+        <i class="fas fa-plus"></i> Crear Alarma
+      </button></a>
     <button type="button" class="btn"><i class="fa-solid fa-chevron-left"></i></button>
     <button type="button" class="btn"><i class="fa-solid fa-chevron-right"></i></button>
   </div>
