--- a/src/app/components/timepicker/timepicker.component.html
+++ b/src/app/components/timepicker/timepicker.component.html
@@ -1,3 +1,3 @@
-<h6>Selecciona la Hora</h6>
-<input placeholder="Has click para selecionar!" [ngxTimepicker]="picker">
+<input placeholder="Has click para selecionar la hora!" class="w-100 border-1 border-light rounded-1"
+  [ngxTimepicker]="picker">
 <ngx-material-timepicker #picker></ngx-material-timepicker>
