--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -47,9 +47,9 @@
 
   <div class="d-flex pt-5">
     <h3 class="pe-3">Rutinas </h3>
-    <button class="btn custom-btn">
-      <i class="fas fa-plus"></i> Crear Rutina
-    </button>
+    <a routerLink="/rutina-detail/1"><button class="btn custom-btn">
+        <i class="fas fa-plus"></i> Crear Rutina
+      </button></a>
     <button type="button" class="btn"><i class="fa-solid fa-chevron-left"></i></button>
     <button type="button" class="btn"><i class="fa-solid fa-chevron-right"></i></button>
   </div>
@@ -74,9 +74,11 @@
             <!-- Lado izquierdo: Título y Botón -->
             <div class="col-8 ">
               <h5 class="card-title ">Sesión de Estudio</h5>
-              <button class="btn custom-btn mt-3">
-                <i class="fas fa-plus"></i> Iniciar sesión de estudio
-              </button>
+              <a routerLink="/study">
+                <button class="btn custom-btn mt-3">
+                  <i class="fas fa-plus"></i> Iniciar sesión de estudio
+                </button>
+              </a>
             </div>
             <!-- Lado derecho: Ícono grande -->
             <div class="col-md-4 text-right">
