--- a/src/app/pages/study-session/study-session.component.html
+++ b/src/app/pages/study-session/study-session.component.html
@@ -1,5 +1,5 @@
 <div class="container rounded-4 shadow-lg bg-light pt-4 mt-3 py-2">
-  <h1 class="fs-3 text-center">Crear Nueva Alarma</h1>
+  <h1 class="fs-3 text-center">Sesión de Estudio</h1>
   <div class="row mx-5 justify-content-center">
     <div class="col-md-4">
       <a routerLink="/home"><button class="btn custom-btn mt-4">
