--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -95,9 +95,9 @@
             <!-- Lado izquierdo: Título y Botón -->
             <div class="col-8 ">
               <h5 class="card-title ">Calendario</h5>
-              <button class="btn custom-btn-2 mt-3">
-                <i class="fas fa-plus"></i> Conectar con Calendario
-              </button>
+              <a href="https://calendar.google.com/calendar"><button class="btn custom-btn-2 mt-3">
+                  <i class="fas fa-plus"></i> Conectar con Calendario
+                </button></a>
             </div>
             <!-- Lado derecho: Ícono grande -->
             <div class="col-md-4 text-right">
